fix: use environment variable for FASTAPI base URL configuration

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ INCLUDED_ONLY=+33123456789,+33987654321,+22912345678
 # EXCLUDED: Liste des numéros à exclure TOTALEMENT (séparés par des virgules)
 # Ces numéros ne pourront jamais interagir avec le bot
 EXCLUDED=+33111111111,+33222222222,spammer123
-
+FASTAPI_BASE_URL=http://localhost:8000
 # Exemples d'utilisation :
 
 # 1. Autoriser SEULEMENT certains numéros :
